--- a/client/src/App.css
+++ b/client/src/App.css
@@ -313,7 +313,50 @@
 /* Contact */
 #contact {
   color: var(--website-accent-2);
-  height: 200px;
+  height: auto;
+  margin: 10vw;
+}
+
+#contact-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 4vw;
+}
+
+.text-input {
+  margin: 1vw;
+  width: 30vw;
+  background-color: white;
+  color: var(--website-accent-2);
+  border-radius: 3px;
+  font-size: 20px;
+}
+
+.form-checkbox {
+  margin: 0.5vw;
+  height: 17px;
+  width: 17px;
+  background-color: white;
+}
+
+#email-button {
+  background-color: var(--website-accent-2);
+  margin-top: 3vw;
+}
+
+#service-input {
+  flex-direction: row;
+  font-size: 20px;
+  margin: 2vw 0px 2vw;
+}
+
+#service-input input {
+  margin: 0.5vw;
+  height: 17px;
+  width: 17px;
+  background-color: white;
 }
 /* Misc. */
 #website-plans {
